# ChartCharm

./: .gitignore  CHANGELOG  Cargo.toml  Dockerfile  LICENSE  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  rust-toolchain.toml  tailwind.config.js
.github/workflows/: rust-ci.yml
src-db/: Cargo.toml
src-db/src/: bindings.rs  lib.rs  models.rs
src-db/src/bindings/: chart_kind.rs  charts.rs  data_points.rs  projects.rs  settings.rs  theme.rs
src-db/src/models/: chart_kind.rs  charts.rs  data_points.rs  projects.rs  settings.rs  theme.rs
src-db/src/sql/: count_theme_types.sql  create_chart_kind_table.sql  create_charts_table.sql  create_data_points_table.sql  create_project_table.sql  create_settings_table.sql  create_tables.sql  create_theme_table.sql  query_selected_theme.sql
src-macro/: Cargo.toml
src-macro/src/: lib.rs
src-migrations/: Cargo.toml
src-migrations/src/: initial_create_tables.rs  lib.rs  main.rs
src-shared/: Cargo.toml
src-shared/src/: chart.rs  chart_kind.rs  data_point.rs  lib.rs  project.rs  settings.rs  theme.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bindings.rs  main.rs
src-tauri/src/bindings/: chart_kind.rs  charts.rs  data_points.rs  projects.rs  settings.rs  theme.rs
src-ui/: Cargo.toml  index.html
src-ui/public/js/: chart.js
src-ui/public/js/components/: sidebar_modal.js  theme_switcher.js
src-ui/public/scss/: main.scss
src-ui/public/scss/components/: _datapoint_tile.scss  _foreground_widget.scss  _project_list.scss  _project_tile.scss
src-ui/src/: components.rs  contexts.rs  lib.rs  main.rs  models.rs  utilities.rs  widgets.rs
src-ui/src/components/: core.rs  header.rs  project.rs  projects.rs  sidebar.rs
src-ui/src/contexts/: modal_controller.rs
src-ui/src/models/: data_point.rs  project.rs  settings.rs  theme.rs
src/chart_charm/: __main__.py  app.py  models.py
src/chart_charm/resources/css/components/: header.css  sidebar.css
src/chart_charm/resources/js/components/: add_project_modal.js  modal.js  theme_switcher.js
src/chart_charm/routes/: index.py  project.py
src/chart_charm/routes/settings/: settings.py  theme.py
src/chart_charm/templates/: base.html  header.html  index.html  sidebar.html
src/chart_charm/templates/project/: add_modal.html
