[package]
name = "chartcharm_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-async-std",
    "with-chrono",
] }
dirs = "5"
async-std = { version = "1", features = ["attributes"] }
chrono = "0.4"
chartcharm_database_migration = { path = "../src-migrations" }
chartcharm_shared = { path = "../src-shared" }
