[package]
name = "chartcharm_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prsqlite = { git = "https://github.com/JamesClarke7283/prsqlite/", version = "0.1.0", branch = "add-value-conversion" }
dirs = "5"
async-std = { version = "1", features = ["attributes"] }
chrono = "0.4"
chartcharm_shared = { path = "../src-shared" }
anyhow = "1.0"
rusqlite = "0.29.0"
log = "0.4.20"
