[package]
name = "chartcharm_database_migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "chartcharm_database_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["sqlx-sqlite"]
