[package]
name = "chartcharm_client"
version = "0.0.0"
description = "A ChartCharm client built with Tauri."
authors = ["James Clarke"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.1", features = ["api-all"] }
chartcharm_database = { path = "../src-db" }
chartcharm_shared = { path = "../src-shared" }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-async-std"] }
async-std = { version = "1.12", features = ["attributes", "unstable"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
