[package]
name = "chartcharm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4", features = ["csr"] }
leptos_meta = {version = "0.4.10", features=["csr"]}
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"

serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono"]}

tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "904450", features = [
  "all",
] }
futures = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3"
